--- a/index.html
+++ b/index.html
@@ -415,4 +415,9 @@
                     
                     <div class="product-card">
                         <span class="product-emoji">🕶️</span>
-                        <h3 class="product-title">Óculos de Sol Polo London Club</h3>
+                        <h3 class="product-title">Óculos de Sol Polo London Club</h3>                        
+                        <div class="links-container">
+                            <a href="https://www.amazon.com.br/Polo-London-Club-Quadrado-Unissex/dp/B0D6M4SYKS?th=1" class="link-btn amazon-link" target="_blank">Ver na Amazon</a>
+                            <a href="https://www.amazon.com.br/Polo-London-Club-Quadrado-Unissex/dp/B0D6M4SYKS?th=1&linkCode=ll1&tag=vidasustent01-20&linkId=7hqq896s3rt330v16u5h5gpu3tpp398n&language=pt_BR&ref_=as_li_ss_tl" class="link-btn affiliate-link" target="_blank">Comprar com Desconto 💰</a>
+                        </div>
+                    </div>
